--- a/citrone_classification.ipynb
+++ b/citrone_classification.ipynb
@@ -1702,7 +1702,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "e53d2d58",
+   "id": "157b2011",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1723,12 +1723,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e3897880",
+   "cell_type": "markdown",
+   "id": "582e4aa0",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### Testing our model with user's input"
+   ]
   },
   {
    "cell_type": "code",
@@ -1769,171 +1769,6 @@
     "else:\n",
     "    print('Student eligible for intermediate')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 301,
-   "id": "ba36ab18",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0], dtype=int64)"
-      ]
-     },
-     "execution_count": 301,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "model_1.predict(X_test[1:2]) #X_test[1:2]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 302,
-   "id": "6ef26073",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[1, 0, 1, 0, 1, 0, 0, 1, 1, 1, 0, 1, 0, 1, 0, 0, 0, 0, 1, 0, 0, 1,\n",
-       "        1, 1, 1, 0, 0, 0, 1, 0, 1, 0, 0, 1, 1, 1, 1, 0, 1, 1, 0, 0, 1, 1,\n",
-       "        0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 0, 1, 1, 0, 0, 0, 1, 0, 0, 1, 0, 0,\n",
-       "        1, 0, 1, 1, 0, 0, 0, 1, 1, 1, 1, 0, 0, 0, 1, 1, 1, 1, 1, 1, 0, 1,\n",
-       "        1, 0, 1, 1, 1, 1, 1, 0, 0, 0, 1, 0]], dtype=int64)"
-      ]
-     },
-     "execution_count": 302,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.asarray(y_test[:100]).reshape(1,-1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 303,
-   "id": "f764f7e6",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 1, 58, 90]])"
-      ]
-     },
-     "execution_count": 303,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "input_data_reshape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 304,
-   "id": "c1de8de0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    " # Standardizing the numerical columns\n",
-    "#input_data_reshape = scaler.fit_transform(input_data_reshape)\n",
-    "input_data_reshape = scaler.transform(input_data_reshape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 305,
-   "id": "6e91de05",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[0., 0., 0.]])"
-      ]
-     },
-     "execution_count": 305,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "input_data_reshape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 284,
-   "id": "d877fc79",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Lesson_Summary</th>\n",
-       "      <th>Assignment_Summary</th>\n",
-       "      <th>Grade_Point_Average</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>663</th>\n",
-       "      <td>1.043712</td>\n",
-       "      <td>0.724298</td>\n",
-       "      <td>-1.163339</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     Lesson_Summary  Assignment_Summary  Grade_Point_Average\n",
-       "663        1.043712            0.724298            -1.163339"
-      ]
-     },
-     "execution_count": 284,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "X_test[1:2]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "96f648e2",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
